--- a/index.html
+++ b/index.html
@@ -76,35 +76,7 @@
 		</div>
 	</div>
 	<!-- Form -->
-	<div id="form" style="background: #F0F0F0; border-bottom: 1px solid #CCC; padding: 25px; padding-bottom: 15px;">
-		<div class="row">
-			<div class="large-5 columns">
-				<div class="row collapse">
-					<div class="small-3 columns">
-						<span class="prefix">API Key</span>
-					</div>
-					<div class="small-9 columns">
-						<input type="text" placeholder="Valid Master API Key" id="apiKeyInput">
-					</div>
-				</div>
-			</div>
-			<div class="large-5 columns">
-				<div class="row collapse">
-					<div class="small-3 columns">
-						<span class="prefix">Feed ID's</span>
-					</div>
-					<div class="small-9 columns">
-						<input type="text" placeholder="Comma separated" id="feedsInput">
-					</div>
-				</div>
-			</div>
-			<div class="large-2 columns">
-				<a id="setFeeds" href="#" data-reveal-id="secondModal" class="secondary button small expand">
-					Visualize &raquo;
-				</a>
-			</div>
-		</div>
-	</div>
+	
 	<!-- Page Content -->
 	<div id="xivelyContent" style="position: relative;">
 		<div id="welcome">
@@ -118,6 +90,14 @@
 				</div>
 				<div class="large-1 columns">&nbsp;</div>
 			</div>
+		<div class="row">
+									<div class="large-9 columns datastream-name subheader" style="font-size: 24px;">
+										Datastream Name
+									</div>
+									<div class="large-3 columns datastream-value subheader" style="font-size: 24px; text-align: right;">
+										420
+									</div>
+								</div>
 		<div id="feeds">
 			<div class="feed hidden" id="exampleFeedNotFound" style="line-height: 25px; padding-top: 25px;">
 				<div class="row title">
