--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 										420
 									</div>
 								</div>
+		<div class="graph" style="width: 900px; margin: auto;"></div>
+		
 		<div id="feeds">
 			<div class="feed hidden" id="exampleFeedNotFound" style="line-height: 25px; padding-top: 25px;">
 				<div class="row title">
