--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
 		</div>
 	</div>
 	<!-- Page Content -->
+	<div class="large-9 columns datastream-name subheader" style="font-size: 24px;">
+										Datastream Name
+									</div>
+									<div class="large-3 columns datastream-value subheader" style="font-size: 24px; text-align: right;">
+										420
+									</div>
+								</div>
+		<div class="graph" style="width: 900px; margin: auto;"></div>
 	<div id="xivelyContent" style="position: relative;">
 		<div id="welcome">
 			<div class="row">
