--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="graph" style="width: 900px; margin: auto;"></div>
 					<div class="large-12 columns">
 						<div class="datastreams" style="padding-bottom: 15px;">
 							<div class="datastream hidden">
