--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										420
 									</div>
 								</div>
-		<div class="graph" style="width: 900px; margin: auto;"></div>
+		<div id="graph" style="width: 900px; margin: auto;"></div>
 		
 		<div id="feeds">
 			<div class="feed hidden" id="exampleFeedNotFound" style="line-height: 25px; padding-top: 25px;">
