--- a/index.html
+++ b/index.html
@@ -107,145 +107,10 @@
 	</div>
 	<!-- Page Content -->
 	<div id="xivelyContent" style="position: relative;">
-		<div id="welcome">
-			<div class="row">
-				<div class="large-1 columns">&nbsp;</div>
-				<div class="large-10 columns text-center">
-					<br/><br/><br/><br/><br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Welcome to Xively!</h1>
-					<p>This page is an example of just one of many ways you can visualise your data on Xively.<br/>It was created with open-source tools, and reads data from Xively with the Xively JavaScript library.</p>
-					<p>Read the tutorial <i>(comming soon)</i> on how to make and customise your own.</p>
-				</div>
-				<div class="large-1 columns">&nbsp;</div>
-			</div>
-			<div class="row">
-				<div class="large-12 columns">
-					<br/><br/><br/><br/><hr/><br/><br/><br/><br/>
-					<div class="row">
-						<div class="large-4 columns">
-							<div class="hero panel">
-								<p style="font-size: 14px;">To use this page, enter a Master API Key from your Xively account, and a list of the Feeds that you would like to display, into the forms above. You can view multiple Feeds by separating them with a comma, and select individual channels with an exclamation mark.</p>
-							</div>
-						</div>
-						<div class="large-8 columns">
-							<h4 class="subheader">Examples</h4>
-							<hr/>
-							<div class="row">
-								<div class="large-4 columns">
-									<strong style="text-transform: uppercase;">Multiple Feeds</strong>
-								</div>
-								<div class="large-8 columns">
-									<pre><em>61916,61916</em></pre>
-								</div>
-							</div>
-							<hr/>
-							<div class="row">
-								<div class="large-4 columns">
-									<strong style="text-transform: uppercase;">Individual Channels</strong><br/>
-									<small>separate with exclamation marks</small>
-								</div>
-								<div class="large-8 columns">
-									<pre><em>61916!random5!random3600</em></pre><br/>
-									<pre><em>61916!random5,61916!random3600</em></pre>
-								</div>
-							</div>
-						</div>
-					</div>
-					<br/><br/><br/><br/><hr/><br/><br/><br/><br/>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-2 columns">&nbsp;</div>
-				<div class="large-8 columns">
-					<h5 class="subheader text-center">To begin visualizing data, enter your Xively Master API key above!</h5>
-					<br/><br/><br/><br/><br/><br/><br/>
-				</div>
-				<div class="large-2 columns">&nbsp;</div>
-			</div>
-		</div>
-		<div id="invalidApiKey" class="hidden">
-			<div class="row">
-				<div class="large-2 columns">&nbsp;</div>
-				<div class="large-8 columns">
-					<br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Uh oh!</h1>
-					<h2 class="subheader" style="text-align: center;">Your API key is invalid!</h2>
-					<p>Please try again or generate a new key on Xively. It is important to keep in mind that this API key must be a global API key in order to work in this example. Using an application-specific API key will cause this example to malfunction.</p>
-
-					<a href="#" data-reveal-id="exampleModal" class="openStart radius secondary button expand">Ready When You Are...</a>
-					<br/><br/><br/>
-				</div>
-				<div class="large-2 columns">&nbsp;</div>
-			</div>
-		</div>
-		<div id="validApiKey" class="hidden">
-			<div class="row">
-				<div class="large-2 columns">&nbsp;</div>
-				<div class="large-8 columns">
-					<br/><br/><br/>
-					<br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Connected to Xively!</h1>
-					<h5 class="subheader text-center">To begin visualizing data, enter your Xively feed information above...</h5>
-				</div>
-				<div class="large-2 columns">&nbsp;</div>
-			</div>
-			<div class="row">
-				<div class="large-12 columns">
-					<br/><br/><br/><br/><hr/><br/><br/><br/><br/>
-					<div class="row">
-						<div class="large-4 columns">
-							<div class="hero panel">
-								<p style="font-size: 14px;">To use this page, enter a Master API Key from your Xively account, and a list of the Feeds that you would like to display, into the forms above. You can view multiple Feeds by separating them with a comma, and select individual channels with an exclamation mark.</p>
-							</div>
-						</div>
-						<div class="large-8 columns">
-							<h4 class="subheader">Examples</h4>
-							<hr/>
-							<div class="row">
-								<div class="large-4 columns">
-									<strong style="text-transform: uppercase;">Multiple Feeds</strong>
-								</div>
-								<div class="large-8 columns">
-									<pre><em>61916,61916</em></pre>
-								</div>
-							</div>
-							<hr/>
-							<div class="row">
-								<div class="large-4 columns">
-									<strong style="text-transform: uppercase;">Individual Channels</strong><br/>
-									<small>separate with exclamation marks</small>
-								</div>
-								<div class="large-8 columns">
-									<pre><em>61916!random5!random3600</em></pre><br/>
-									<pre><em>61916!random5,61916!random3600</em></pre>
-								</div>
-							</div>
-						</div>
-					</div>
-					<br/><br/><br/><br/>
-					<br/><br/><br/><br/>
-					<br/><br/><br/><br/>
-				</div>
-			</div>
-		</div>
+		
 		<div id="feeds">
-			<div class="feed hidden" id="exampleFeedNotFound" style="line-height: 25px; padding-top: 25px;">
-				<div class="row title">
-					<div class="large-12 columns">
-						<h2 class="subheader value">Loading Feed Data...</h2>
-
-						<div class="alert alert-box no-info">
-							Sorry, this feed could not be found.
-						</div>
-					</div>
-				</div>
-			</div>
+			
 			<div class="feed hidden" id="exampleFeed" style="line-height: 25px; padding-top: 25px;">
-				<div class="row title">
-					<div class="large-12 columns">
-						<h2 class="subheader value">Loading Feed Data...</h2>
-					</div>
-				</div>
 				<div class="row">
 					<div class="large-12 columns">
 						<div class="button-group" style="float: right;">
@@ -316,8 +181,8 @@
 		'.js><\/script>')
 	</script>
 
-	<script src="js/foundation.min.js"></script>
-	<script src="follows.js"></script>
+	//<script src="js/foundation.min.js"></script>
+	//<script src="follows.js"></script>
 
 </body>
 </html>
