--- a/index.html
+++ b/index.html
@@ -26,16 +26,13 @@
 			overflow-x: hidden;
 			background: #666 url(img/loading.gif) center center no-repeat;
 		}
-
 		.hidden {
 			display: none;
 		}
-
 		#xivelyContent {
 			background: #fff;
 			box-shadow: inset 0px 0px 100px #f0f0f0;
 		}
-
 			.graphWrapper {
 				-moz-box-shadow:inset 0px 0px 50px 25px #ffffff;
 				-webkit-box-shadow:inset 0px 0px 50px 25px #ffffff;
@@ -106,54 +103,11 @@
 		</div>
 	</div>
 	<!-- Page Content -->
-	<div class="large-9 columns datastream-name subheader" style="font-size: 24px;">
-										Datastream Name
-									</div>
-									<div class="large-3 columns datastream-value subheader" style="font-size: 24px; text-align: right;">
-										420
-									</div>
-								</div>
-		<div class="graph" style="width: 900px; margin: auto;"></div>
 	<div id="xivelyContent" style="position: relative;">
-		<div id="welcome">
-			<div class="row">
-				<div class="large-1 columns">&nbsp;</div>
-				<div class="large-10 columns text-center">
-					<br/><br/><br/><br/><br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Welcome to Xively!</h1>
-					<p>This page is an example of just one of many ways you can visualise your data on Xively.<br/>It was created with open-source tools, and reads data from Xively with the Xively JavaScript library.</p>
-					<p>Read the tutorial <i>(comming soon)</i> on how to make and customise your own.</p>
-				</div>
-				<div class="large-1 columns">&nbsp;</div>
-			</div>
-		<div class="row">
-									<div class="large-9 columns datastream-name subheader" style="font-size: 24px;">
-										Datastream Name
-									</div>
-									<div class="large-3 columns datastream-value subheader" style="font-size: 24px; text-align: right;">
-										420
-									</div>
-								</div>
-		<div id="graph" style="width: 900px; margin: auto;"></div>
 		
 		<div id="feeds">
-			<div class="feed hidden" id="exampleFeedNotFound" style="line-height: 25px; padding-top: 25px;">
-				<div class="row title">
-					<div class="large-12 columns">
-						<h2 class="subheader value">Loading Feed Data...</h2>
-
-						<div class="alert alert-box no-info">
-							Sorry, this feed could not be found.
-						</div>
-					</div>
-				</div>
-			</div>
+			
 			<div class="feed hidden" id="exampleFeed" style="line-height: 25px; padding-top: 25px;">
-				<div class="row title">
-					<div class="large-12 columns">
-						<h2 class="subheader value">Loading Feed Data...</h2>
-					</div>
-				</div>
 				<div class="row">
 					<div class="large-12 columns">
 						<div class="button-group" style="float: right;">
@@ -166,7 +120,6 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="graph" style="width: 900px; margin: auto;"></div>
 					<div class="large-12 columns">
 						<div class="datastreams" style="padding-bottom: 15px;">
 							<div class="datastream hidden">
@@ -225,8 +178,8 @@
 		'.js><\/script>')
 	</script>
 
-	<script src="js/foundation.min.js"></script>
-	<script src="follows.js"></script>
+	//<script src="js/foundation.min.js"></script>
+	//<script src="follows.js"></script>
 
 </body>
 </html>
