--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 		'.js><\/script>')
 	</script>
 
-	//<script src="js/foundation.min.js"></script>
+	<!-- <script src="js/foundation.min.js"></script>
 	//<script src="follows.js"></script>
-
+-->
 </body>
 </html>
