--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		
 		<div id="feeds">
 			
-			<div class="feed hidden" id="exampleFeed" style="line-height: 25px; padding-top: 25px;">
+			<div class="feed" id="exampleFeed" style="line-height: 25px; padding-top: 25px;">
 				<div class="row">
 					<div class="large-12 columns">
 						<div class="button-group" style="float: right;">
