--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 		'.js><\/script>')
 	</script>
 
-	<!-- <script src="js/foundation.min.js"></script>
-	//<script src="follows.js"></script>
--->
+	<script src="js/foundation.min.js"></script>
+	<script src="follows1.js"></script>
+
 </body>
 </html>
