--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 								<div class="row">
 									<div class="large-12 columns">
 										<div class="graphWrapper" style="margin-top: 15px; padding: 10px; text-align: center;">
-											<div class="graph" style="width: 900px; margin: auto;"></div>
+											 <!-- <div class="graph" style="width: 900px; margin: auto;"></div> -->
+											<div id="graph" style="width: 900px; margin: auto;"></div>
 										</div>
-										<div class="slider" style="width: 900px; height: 15px; margin: auto;"></div>
+										<div id="slider" style="width: 900px; height: 15px; margin: auto;"></div>
 									</div>
 								</div>
 							</div>
