--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 			</div>
 		</div>
 	</div>
-	
+
+
 	<!-- Page Content -->
 	<div id="xivelyContent" style="position: relative;">
 		
@@ -93,7 +94,7 @@
 				<div class="row">
 					<div class="large-12 columns">
 						<div class="datastreams" style="padding-bottom: 15px;">
-							<div class="datastream hidden">
+							<div class="datastream">
 								<hr/>
 								<div class="row">
 									<div class="large-9 columns datastream-name subheader" style="font-size: 24px;">
@@ -107,7 +108,7 @@
 									<div class="large-12 columns">
 										<div class="graphWrapper" style="margin-top: 15px; padding: 10px; text-align: center;">
 											 <!-- <div class="graph" style="width: 900px; margin: auto;"></div> -->
-											<div id="graph" style="width: 900px; margin: auto;"></div>
+											<div id="graph1" style="width: 900px; margin: auto;"></div>
 										</div>
 										<div id="slider" style="width: 900px; height: 15px; margin: auto;"></div>
 									</div>
